--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.20.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vis.gl/react-google-maps": "^1.4.2",
     "aos": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -16,6 +18,7 @@
     "sass": "^1.81.0",
     "scss": "^0.2.4",
     "swiper": "^11.1.15",
+    "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
