--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "react-icons": "^5.3.0",
     "react-router": "^7.0.1",
     "react-router-dom": "^7.0.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.81.0",
     "scss": "^0.2.4",
     "swiper": "^11.1.15",
     "use-places-autocomplete": "^4.0.1",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://taghizadaaa.github.io/dippintdots"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
