--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "dippindots",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://taghizadaaa.github.io/dippindotsnpm run deploy
-",
   "dependencies": {
     "@react-google-maps/api": "^2.20.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -27,9 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
