--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "aos": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
     "react-icons": "^5.3.0",
     "react-router": "^7.0.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "resolver": "^0.1.12",
     "sass": "^1.81.0",
     "scss": "^0.2.4",
     "swiper": "^11.1.15",
     "use-places-autocomplete": "^4.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
